thread detail alignment fix, footer border for clarity

--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -2,4 +2,5 @@ footer{
     background-color: #003566;
     text-align: center;
     display:flex;
+    border:solid 1px white;
 }
