--- a/client/src/Components/ThreadDetail/ThreadDetail.css
+++ b/client/src/Components/ThreadDetail/ThreadDetail.css
@@ -19,6 +19,10 @@
     justify-content: space-between;
 }
 
+.reply-info{
+    margin-top: 1rem;
+}
+
 h3{
     font-size: x-large;
     margin-left: 1.6rem;
